--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500&display=swap');
-
+body{
+font-size: 20px
+}
 *{
   font-family: 'Poppins', sans-serif;
   margin:0; padding:0;
